[package]
name = "qmp"
version = "0.1.0"
authors = ["Mazaryn Team"]
repository = "https://github.com/Qenome/qenome_market"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.5.0"

[dev-dependencies]
solana-program-test = "1.5.0"
solana-sdk = "1.5.0"
tokio = { version = "0.3", features = ["macros"]}
