[package]
authors = ['Mazaryn Team <https://github.com/mazaryn/Qenome']
description = 'QenomeTrade: Orderbook based Trading Chain Node.'
edition = '2018'
homepage = 'https://github.com/mazaryn/Qenome'
license = 'Unlicense'
name = 'pallet-qenome'
repository = 'https://github.com/mazaryn/Qenome'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
serde_json = "1.0.41"

[dependencies]
compare = "0.1.0"
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional= true }
jsonrpc-core = "14.0.3"
hex = {version = "0.4.2", default-features = false}

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.pallet-generic-asset]
default-features = false
git = 'https://github.com/mazaryn/generic_asset.git'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dependencies.sp-io] #change
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-generic-asset/std',
    'sp-core/std',
]
